# Daily-Paper-Digest

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
config/: topics.json
src/paper_digest/: __init__.py  cli.py  collector.py  config.py  constants.py  dashboard.py  deepseek.py  http.py  importer.py  library.py  llm.py  models.py  pdf_text.py  progress.py  renderer.py  runner.py  schedule.py  text.py  topic_generator.py  topics.py  wecom.py
src/paper_digest/sources/: __init__.py  arxiv.py  cvf.py  openreview.py  semantic_scholar.py  tpami.py
tests/: test_arxiv.py  test_collector.py  test_config.py  test_cvf.py  test_dashboard.py  test_deepseek.py  test_importer.py  test_library.py  test_llm.py  test_progress.py  test_renderer.py  test_schedule.py  test_text.py  test_topics.py  test_tpami.py
