[project]
name = "paper-digest"
version = "0.1.0"
description = "Daily research paper digest for WeCom groups."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pypdf>=5.0.0"]

[project.scripts]
paper-digest = "paper_digest.cli:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
package = true
